# pyau

./: .gitignore  .mcp.json.example  CONTRIBUTING.md  LICENSE  MCP.md  Makefile  README.md  _pyau.py  main.py  multiscan.example.json  multiscan.example.py  multiscan.example.yaml  multiscan.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: publish.yml  test.yml
src/pyau/: __init__.py  __main__.py  cli.py  fix.py  multiscan.py  report.py  severity.py
src/pyau/mcp/: __init__.py  server.py
src/pyau/osv/: __init__.py  client.py  processor.py
src/pyau/parsers/: __init__.py  detect.py  poetry.py  requirements.py  utils.py  uv.py
tests/unit/: test_parser.py
