[project]
name = "pyvulscan"
version = "0.1.5"
description = "Vulnerability scanner for Python dependencies using the OSV API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
  { name = "Rodrigo Polverari", email = "rodrigo.pp.toledo@gmail.com" },
]
keywords = ["security", "vulnerabilities", "dependencies", "osv", "audit"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Security",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

dependencies = ["requests>=2.28.0", "cvss>=2.6"]

[project.urls]
Homepage = "https://github.com/statspyml/pyau"
Issues = "https://github.com/statspyml/pyau/issues"

[project.scripts]
pyvulscan = "pyau.cli:main"
pyvulscan-mcp = "pyau.mcp.server:main"

[project.optional-dependencies]
service = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "apscheduler>=3.10",
  "psycopg2-binary>=2.9",
]
# pip install pyau[mcp]  — MCP server for LLM integration
mcp = ["fastmcp>=0.1"]
# pip install pyau[dev]  — development tools



[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyau"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

[dependency-groups]
dev = [
    "bump-my-version>=1.3.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.bumpversion]
current_version = "0.1.5"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'